--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 absl-py==0.9.0
 astor==0.8.1
-beautifulsoup4==4.8.2
-bs4==0.0.1
 certifi==2019.11.28
 chardet==3.0.4
 Click==7.0
@@ -26,7 +24,7 @@ requests==2.23.0
 six==1.14.0
 soupsieve==1.9.5
 tb-nightly==1.14.0a20190301
-tensorflow==2.1.0
+tensorflow==2.0.0a0 
 termcolor==1.1.0
 tf-estimator-nightly==1.14.0.dev2019030115
 urllib3==1.25.8
